<resources>
    <string name="app_name">TicTacToe</string>
    <string name="start_game">Start game</string>
    <string name="score">Score</string>

   <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="create_player">Create player</string>
    <string name="choose_players">Choose players</string>
    
    <string name="gamer_creation">Gamer creation</string>
    <string name="enter_name">Enter name</string>
    <string name="select_photo">Select photo</string>

    <string name="gamer_name">Gamer name</string>

    <string name="should_choose_players">You have to choose different players</string>
</resources>
